DuPont DevSB/src/objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>fId18__c</fullName>
        <description>18 digit unique id for record. Same Id used for dataloader and other API tools.</description>
        <formula>Id
&amp; MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,(
IF(FIND(MID(Id,1,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0)
+IF(FIND(MID(Id,2,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0)
+IF(FIND(MID(Id,3,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0)
+IF(FIND(MID(Id,4,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0)
+IF(FIND(MID(Id,5,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0)
)+1,1)
&amp; MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,(
IF(FIND(MID(Id,6,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0)
+IF(FIND(MID(Id,7,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0)
+IF(FIND(MID(Id,8,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0)
+IF(FIND(MID(Id,9,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0)
+IF(FIND(MID(Id,10,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0)
)+1,1)
&amp; MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,(
IF(FIND(MID(Id,11,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0)
+IF(FIND(MID(Id,12,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0)
+IF(FIND(MID(Id,13,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0)
+IF(FIND(MID(Id,14,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0)
+IF(FIND(MID(Id,15,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0)
)+1,1)</formula>
        <inlineHelpText>18 digit unique id for record. Same Id used for dataloader and other API tools.</inlineHelpText>
        <label>Id18</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fOwningBusiness__c</fullName>
        <description>DuPont Business</description>
        <formula>MID(TEXT( Owning_Org__c ), 1, FIND(&apos;-&apos;,TEXT( Owning_Org__c ))-1)</formula>
        <inlineHelpText>DuPont Business</inlineHelpText>
        <label>Owning Business</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fPhase__c</fullName>
        <formula>BLANKVALUE(Phase__c,Parent.Phase__c)</formula>
        <label>Campaign Phase</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active Campaigns</label>
    </listViews>
    <listViews>
        <fullName>BIEMEACampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>Owning_Org__c</columns>
        <columns>Geography__c</columns>
        <columns>CAMPAIGN.NUM_CONTACTS</columns>
        <columns>CAMPAIGN.NUM_LEADS</columns>
        <columns>CAMPAIGN.ACTIVE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Target_Group__c</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.LAST_UPDATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Owning_Org__c</field>
            <operation>startsWith</operation>
            <value>BI</value>
        </filters>
        <filters>
            <field>Geography__c</field>
            <operation>equals</operation>
            <value>EMEA</value>
        </filters>
        <label>BI-EMEA Campaigns</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>BuildingInnovations</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BIFrance</fullName>
        <booleanFilter>1 or 2</booleanFilter>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.NUM_CONTACTS</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.ACTIVE</columns>
        <columns>CAMPAIGN.NUM_LEADS</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>Target_Group__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>contains</operation>
            <value>Nordic</value>
        </filters>
        <filters>
            <field>Target_Group__c</field>
            <operation>contains</operation>
            <value>Nordic</value>
        </filters>
        <label>BI-EMEA Campaigns Nordic</label>
        <language>en_US</language>
        <sharedTo>
            <group>BINordic</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BIGermany</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.NUM_CONTACTS</columns>
        <columns>CAMPAIGN.NUM_LEADS</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.LAST_UPDATE</columns>
        <columns>Target_Group__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>contains</operation>
            <value>PUR,german,Deutschland,Germany</value>
        </filters>
        <label>BI-EMEA Campaigns Germany</label>
        <language>en_US</language>
        <sharedTo>
            <group>BIEMEAWEAustria</group>
            <group>BIEMEAWECentral</group>
            <group>BIEMEAWEGermany</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BI_EMEA_Campaigns_BeNeLux</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.ACTIVE</columns>
        <columns>CAMPAIGN.NUM_CONTACTS</columns>
        <columns>CAMPAIGN.NUM_LEADS</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>Target_Group__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Target_Group__c</field>
            <operation>contains</operation>
            <value>BeNeLux</value>
        </filters>
        <label>BI-EMEA Campaigns BeNeLux</label>
        <language>en_US</language>
        <sharedTo>
            <group>BIEMEAWEBenelux</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BI_EMEA_Campaigns_France</fullName>
        <booleanFilter>1 or 2</booleanFilter>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.NUM_CONTACTS</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.ACTIVE</columns>
        <columns>CAMPAIGN.NUM_LEADS</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>Target_Group__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>contains</operation>
            <value>France,french</value>
        </filters>
        <filters>
            <field>Target_Group__c</field>
            <operation>contains</operation>
            <value>France,french</value>
        </filters>
        <label>BI-EMEA Campaigns France</label>
        <language>en_US</language>
        <sharedTo>
            <group>BIEMEAWEFrance</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BI_EMEA_Campaigns_Italy</fullName>
        <booleanFilter>1 or 2</booleanFilter>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.NUM_CONTACTS</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.ACTIVE</columns>
        <columns>CAMPAIGN.NUM_LEADS</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>Target_Group__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>contains</operation>
            <value>Italy</value>
        </filters>
        <filters>
            <field>Target_Group__c</field>
            <operation>contains</operation>
            <value>Italy</value>
        </filters>
        <label>BI-EMEA Campaigns Italy</label>
        <language>en_US</language>
        <sharedTo>
            <group>BINordic</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BI_EMEA_Campaigns_UK</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.NUM_CONTACTS</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.ACTIVE</columns>
        <columns>CAMPAIGN.NUM_LEADS</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>Target_Group__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>contains</operation>
            <value>UK</value>
        </filters>
        <label>BI-EMEA Campaigns UK</label>
        <language>en_US</language>
        <sharedTo>
            <group>BIEMEAWEFrance</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BI_EMEA_NPS_Survey_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.NUM_CONTACTS</columns>
        <columns>NextStepUser__c</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.ACTIVE</columns>
        <columns>fPhase__c</columns>
        <columns>CAMPAIGN.LAST_UPDATE</columns>
        <columns>PARENT_NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>contains</operation>
            <value>Q4 CLS</value>
        </filters>
        <filters>
            <field>CAMPAIGN.STATUS</field>
            <operation>equals</operation>
            <value>In Progress,Completed</value>
        </filters>
        <label>BI-EMEA NPS Survey Campaigns</label>
    </listViews>
    <listViews>
        <fullName>BI_EMEA_NPS_Survey_Campaigns_2012_Q4</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.NUM_CONTACTS</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.ACTIVE</columns>
        <columns>fPhase__c</columns>
        <columns>CAMPAIGN.CREATED_DATE</columns>
        <columns>PrimarySignContact__c</columns>
        <columns>NextStepUser__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>startsWith</operation>
            <value>Q2 CLS BI-EMEA</value>
        </filters>
        <filters>
            <field>CAMPAIGN.STATUS</field>
            <operation>equals</operation>
            <value>Completed,In Progress</value>
        </filters>
        <label>BI-EMEA NPS Survey Campaigns 2014 Q2</label>
    </listViews>
    <listViews>
        <fullName>BI_EMEA_NPS_Survey_Campaigns_2013_Q4</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.NUM_CONTACTS</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.ACTIVE</columns>
        <columns>fPhase__c</columns>
        <columns>CAMPAIGN.LAST_UPDATE</columns>
        <columns>CAMPAIGN.CREATED_DATE</columns>
        <columns>PrimarySignContact__c</columns>
        <columns>NextStepUser__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>startsWith</operation>
            <value>Q4 CLS BI-EMEA</value>
        </filters>
        <filters>
            <field>CAMPAIGN.STATUS</field>
            <operation>equals</operation>
            <value>In Progress,Waiting,Completed</value>
        </filters>
        <label>BI-EMEA NPS Survey Campaigns 2013 Q4</label>
    </listViews>
    <listViews>
        <fullName>BI_EMEA_Price_lists</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.NUM_CONTACTS</columns>
        <columns>CAMPAIGN.NUM_LEADS</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.ACTIVE</columns>
        <columns>CAMPAIGN.LAST_UPDATE</columns>
        <columns>Target_Group__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>contains</operation>
            <value>price lists</value>
        </filters>
        <filters>
            <field>Owning_Org__c</field>
            <operation>startsWith</operation>
            <value>BI</value>
        </filters>
        <label>BI-EMEA Price lists</label>
        <language>en_US</language>
        <sharedTo>
            <group>BIEMEAAdmin</group>
            <group>BIEMEAService</group>
            <group>BIEMEAServiceReader</group>
            <roleAndSubordinatesInternal>BuildingInnovations</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BI_EMEA_QN_Members</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.NUM_CONTACTS</columns>
        <columns>CAMPAIGN.NUM_LEADS</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.ACTIVE</columns>
        <columns>Target_Group__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>contains</operation>
            <value>QN Members</value>
        </filters>
        <label>BI-EMEA QN Members</label>
        <language>en_US</language>
        <sharedTo>
            <group>BIEMEAService</group>
            <group>BIEMEAServiceReader</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BI_EMEA_QN_Portal</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.NUM_CONTACTS</columns>
        <columns>CAMPAIGN.NUM_LEADS</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.ACTIVE</columns>
        <columns>CAMPAIGN.LAST_UPDATE</columns>
        <columns>Target_Group__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>contains</operation>
            <value>QN Portal</value>
        </filters>
        <filters>
            <field>Owning_Org__c</field>
            <operation>startsWith</operation>
            <value>BI</value>
        </filters>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>BI-EMEA QN Portal</label>
        <language>en_US</language>
        <sharedTo>
            <group>BIEMEAAdmin</group>
            <group>BIEMEAService</group>
            <group>BIEMEAServiceReader</group>
            <roleAndSubordinatesInternal>BuildingInnovations</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BI_NA_Campaigns3</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>startsWith</operation>
            <value>BI-NA</value>
        </filters>
        <label>BI-NA Campaigns</label>
        <language>en_US</language>
        <sharedTo>
            <role>BuildingInnovations</role>
            <roleAndSubordinatesInternal>BINA</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>BI_NA_Campaign</fullName>
        <active>true</active>
        <label>BI-NA Campaign</label>
    </recordTypes>
    <recordTypes>
        <fullName>BI_NA_Campaign_External</fullName>
        <active>true</active>
        <label>BI-NA Campaign External</label>
    </recordTypes>
    <recordTypes>
        <fullName>CampaignAdminMaster</fullName>
        <active>true</active>
        <description>Master Record Type for System Administrator</description>
        <label>Campaign Admin Master</label>
    </recordTypes>
    <recordTypes>
        <fullName>Construction_LA</fullName>
        <active>true</active>
        <label>Construction LA</label>
    </recordTypes>
    <recordTypes>
        <fullName>Customer_Loyalty_Business</fullName>
        <active>true</active>
        <description>Business Recordtype for Customer Loyalty Survey</description>
        <label>Customer Loyalty - Business</label>
    </recordTypes>
    <recordTypes>
        <fullName>Customer_Loyalty_CORP_MS</fullName>
        <active>true</active>
        <description>Corporate M&amp;S Recordtype for Customer Loyalty Survey</description>
        <label>Customer Loyalty - CORP MS</label>
    </recordTypes>
    <recordTypes>
        <fullName>DPTEMEACampaign</fullName>
        <active>true</active>
        <description>DPT - DPP EMEA Campaign</description>
        <label>DPT-EMEA Campaign</label>
    </recordTypes>
    <recordTypes>
        <fullName>DPTIPPCampaign</fullName>
        <active>true</active>
        <description>DPT - DuPont Personal Protection - North America Campaigns</description>
        <label>DPT-IPP Campaign</label>
    </recordTypes>
    <recordTypes>
        <fullName>DPTNOWNACampaign</fullName>
        <active>true</active>
        <description>DPT - Nonwovens NA Campaign Record Type</description>
        <label>DPT-NOW NA Campaign</label>
    </recordTypes>
    <recordTypes>
        <fullName>DPT_AramidsCampaign</fullName>
        <active>true</active>
        <description>DPT - Advanced Fibers Systems (AFS) Campaign</description>
        <label>DPT-Aramids Campaign</label>
    </recordTypes>
    <recordTypes>
        <fullName>EbizCampaign</fullName>
        <active>false</active>
        <description>eBusiness Campaign Record Type</description>
        <label>Ebiz Campaign</label>
    </recordTypes>
    <recordTypes>
        <fullName>LatinAmericaCampaigns</fullName>
        <active>true</active>
        <description>Record Type for Latin America Campaigns</description>
        <label>Latin America Campaigns</label>
    </recordTypes>
    <recordTypes>
        <fullName>Level_2_Now</fullName>
        <active>true</active>
        <label>Level 2 Now</label>
    </recordTypes>
    <recordTypes>
        <fullName>MCM_Campaign</fullName>
        <active>false</active>
        <description>MCM Americas Campaigns</description>
        <label>MCM Campaign</label>
    </recordTypes>
    <recordTypes>
        <fullName>Marketing_Communications</fullName>
        <active>false</active>
        <label>Marketing Communications</label>
    </recordTypes>
    <recordTypes>
        <fullName>Subscriber_List</fullName>
        <active>true</active>
        <label>Subscriber List</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Secondary_Signature_Title_is_required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(RecordTypeId =&apos;01230000000q8Fn&apos;,NOT(ISBLANK( SecondarySignContact__c )),ISPICKVAL(SecondarySignTitle__c, &quot;&quot;))</errorConditionFormula>
        <errorDisplayField>SecondarySignTitle__c</errorDisplayField>
        <errorMessage>You must enter a title for the Secondary Signer</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Secondary_Signature_is_required</fullName>
        <active>true</active>
        <errorConditionFormula>AND( RecordTypeId =&apos;01230000000q8Fn&apos;, NOT( ISPICKVAL(SecondarySignTitle__c, &quot;&quot;)),ISBLANK( SecondarySignContact__c ))</errorConditionFormula>
        <errorDisplayField>SecondarySignContact__c</errorDisplayField>
        <errorMessage>You must select a Secondary Signer if you enter a Secondary Signature Title</errorMessage>
    </validationRules>
</CustomObject>